metadata/force-app/main/default/objects/CustomName_YnUhb__c/CustomName_YnUhb__c.object-meta.xml
<CustomObject>
    <description>Description_aOKkZ</description>
    <label>CustomLabel_DuEQt</label>
    <nameField>
        <label>CustomLabel_DuEQt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_DuEQts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>