metadata/force-app/main/default/objects/CustomName_YnUhb__c/fields/CustomField_Bhedf__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Bhedf__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldRRrIx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>