metadata/force-app/main/default/objects/CustomName_YnUhb__c/fields/CustomField_pTGhP__c.field-meta.xml
<CustomField>
    <fullName>CustomField_pTGhP__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldnMFtT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>